iac/kustomize/infra/kong/route/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openapi-mock-api
  namespace: kong
  annotations:
    konghq.com/plugins: key-auth,rate-limit-5-min
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: openapi-mock
          namespace: api
          port: 8080
