iac/kustomize/infra/kong/route/httproute-health.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openapi-mock-health
  namespace: kong
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: openapi-mock
          namespace: api
          port: 8080
